# GenPot

./: .dockerignore  .gitignore  Dockerfile  README.md  check_faiss_metric.py  docker-compose.yml  entrypoint.sh  filebeat.yml  pyproject.toml  rag_accuracy_BAAI_2  rag_playground.py  run.py  test_rag_debug.py  test_state_manager.py  verify_prompt.py  verify_stateful_loop.py
.github/workflows/: python-tests.yml
bruno/decoypot-api/: bruno.json  idk.bru
bruno/genpot-api/: bruno.json
config/: genpot.yaml
dashboard/: app.py  test_generator.py
data/: smtp_rfc5321.yaml
knowledge_base/: api.faiss  api_index.faiss  index_metadata.pkl  index_to_chunk.pkl  ingest.py  mapping.pkl  reasoner_model.pkl  smtp_index.faiss  smtp_index_metadata.pkl  smtp_index_to_chunk.pkl
onnx_model/: config.json  ort_config.json
scripts/: build_smtp_index.py  ingest.py
scripts/test_scripts/: test_live_attacks.py  test_live_rag_logging.py  test_rag_accuracy.py  test_smtp_attack.py  test_spec_coverage.py  test_statefulness.py
server/: config_manager.py  llm_client.py  logger.py  main.py  prompt_manager.py  rag_system.py  seed_fs.py  ssh_adapter.py  ssh_server.py  state_manager.py  utils.py
server/core/: engine.py  models.py  prompting.py
server/emulators/: http_emulator.py  smtp_emulator.py
tests/api/: test_http_emulator.py  test_main.py  test_smtp_emulator.py
tests/unit/: test_config_manager.py  test_engine.py  test_generator.py  test_llm_client.py  test_logger.py  test_prompt_manager.py  test_prompting.py  test_rag_system.py  test_spec_coverage.py  test_state_manager.py  test_utils.py
