[project]
name = "DecoyPot"
version = "0.1.0"
description = "An LLM-Powered Web API Honeypot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "bitsandbytes>=0.49.1",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "exceptiongroup==1.3.0",
    "faiss-cpu==1.12.0",
    "fastapi==0.116.1",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.1",
    "google-api-python-client==2.181.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-genai>=1.45.0",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "httplib2==0.30.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "numpy==2.2.6",
    "ollama>=0.6.1",
    "onnxruntime>=1.23.2",
    "optimum>=2.1.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.3",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "rsa==4.9.1",
    "scikit-learn==1.7.1",
    "sentence-transformers==5.1.0",
    "sniffio==1.3.1",
    "starlette==0.47.3",
    "streamlit>=1.52.0",
    "tiktoken>=0.12.0",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "transformers==4.56.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
]
